<resources>
    <string name="app_name">ChiMediaPlayer</string>
    <string name="play_text">Play</string>
    <string name="pause_text">Pause</string>
    <string name="stop_text">Stop</string>
    <string name="next_text">Next</string>
    <string name="previous_text">Previous</string>
    <string name="notification_channel_text">My channel</string>
    <string name="add_menu_item_title">Add</string>
    <string name="tab_1_text">Player</string>
    <string name="tab_2_text">Playlist</string>
    <string name="delete_button_description_text">Delete button.</string>
</resources>